--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.energismart.ayudante">
+
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
 
     <application
         android:allowBackup="true"
@@ -12,7 +20,17 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme.NoActionBar">
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.energismart.ayudante.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name">
@@ -25,10 +43,38 @@
         <activity
             android:name=".RegisterActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".AddTruckActivity"
+            android:label="@string/title_activity_add_truck"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="stateHidden" />
+        <activity android:name=".NewTripActivity" />
+        <activity
+            android:name=".ContinueTripActivity"
+            android:label="@string/title_activity_continue_trip"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".AddHospedajeActivity"
+            android:windowSoftInputMode="stateHidden" />
+        <activity
+            android:name=".AddGasolinaActivity"
+            android:windowSoftInputMode="stateHidden" />
+        <activity
+            android:name=".AddAlimentacionActivity"
+            android:windowSoftInputMode="stateHidden" />
+        <activity
+            android:name=".AddOtroActivity"
+            android:windowSoftInputMode="stateHidden" />
+        <activity android:name=".DetalleGastosActivity" />
+        <activity
+            android:name=".AddPeajeActivity"
+            android:windowSoftInputMode="stateHidden" />
+        <activity android:name=".HistorialActivity"></activity>
     </application>
 
 </manifest>
